# CADe-CADx-evaluation

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  config_paper.py  pyproject.toml  run_paper_evaluation.py  sbatch.lcs_evaluate.process.bash  tutorial_cade_cadx_evaluation.ipynb
CADe_CADx_evaluation/: __init__.py  run_paper_evaluation.py
CADe_CADx_evaluation/evaluate_common/: __init__.py  logger.py  plot_score_distribution_benign_cancer.py  precision_recall.py  roc.py  roc_confidence_interval.py  sample_size_analysis.py  sens_spec.py
CADe_CADx_evaluation/evaluate_lesions/: __init__.py  evaluate_lesions.py  froc.py  plot_diameter_prediction_distributions.py
CADe_CADx_evaluation/evaluate_series/: __init__.py  evaluate_series.py
CADe_CADx_evaluation/statistical_tests/: statistical_tests.py
data/data_lesions/: lesions.csv  lesions_longitudinal.csv  lesions_model_CADe.csv  lesions_nndetection_CADe.csv  lesions_nndetection_CADex.csv  lesions_nndetection_baumgartner_CADe.csv  lesions_radiologists.csv
data/data_series/: series.csv
docs/: changelog.rst  conf.py  configuration.rst  contributing.rst  index.rst  input_format.rst  installation.rst  outputs.rst  quickstart.rst
docs/api/: evaluate_common.rst  evaluate_lesions.rst  evaluate_series.rst  index.rst  statistical_tests.rst
