[project]
name = "lcs-evaluation"
version = "0.1.0"
description = ""
authors = [
    { name = "Ezequiel Geremia", email = "ezequiel.geremia@mediantechnologies.com" },
]
dependencies = [
    "Pillow>=10.3.0",
    "pytesseract>=0.3.10",
    "matplotlib>=3.8.4",
    "plotly>=5.22.0",
    "nbformat>=5.10.4",
    "scikit-learn>=1.4.2",
    "pandas>=2.2.2",
    "tqdm>=4.66.4",
    "munch>=4.0.0",
    "numpy==1.26.4",
    "tesseract>=0.1.3",
    "loguru>=0.7.2",
    "seaborn>=0.13.2",
    "opencv-python>=4.10.0.84",
    "docx>=0.2.4",
    "exception>=0.1.0",
    "py-exceptions>=1.2.2",
    "python-docx==1.1.2",
    "openpyxl>=3.1.5",
    "median-ai-ds-util>=0.1.0",
    "median-ai-ds-spatial-core>=0.1.0",
    "median-ai-ds-spatial-visualization>=0.1.0",
    "median-ai-ds-layout>=0.1.0",
    "median-ai-ds-db-nlst>=0.1.0",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
keywords = []
classifiers = []

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = [
    "http://ibiodknode2.median.cad:8081/repository/pypi-hosted/simple",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
