[project]
name = "CADe_CADx_evaluation"
version = "0.1.0"
description = ""
authors = [{ name = "Pierre Baudot", email = "pierre.baudot@mediantechnologies.com" }, ] 
dependencies = [
     "matplotlib>=3.8.4",
     "plotly>=5.22.0",
     "nbformat>=5.10.4",
     "scikit-learn>=1.4.2",
     "pandas>=2.2.2",
     "tqdm>=4.66.4",
     "numpy==1.26.4",
     "loguru>=0.7.2",
     "seaborn>=0.13.2",
     "opencv-python>=4.10.0.84",
     "exception>=0.1.0",
     "py-exceptions>=1.2.2",
     "openpyxl>=3.1.5",
]
requires-python = ">=3.11,<3.12"
readme = "README.md"
keywords = []
classifiers = []


[tool.ruff]
line-length = 120

[tool.ruff.format]
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

